# AbaciClient

./: .gitignore  Abaci_Client  CMakeLists.txt  Client.h  README.md  WorkerThread.h  main.cpp
Abaci_Client_autogen/: mocs_compilation.cpp
Primes/: PrimeClass.cpp  PrimeClass.h
gui/: EditClient.cpp  EditClient.h  MainWindow.cpp  MainWindow.h  editclient.ui  mainwindow.ui
